apps/argo/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Argo Workflows"
    gethomepage.dev/description: "Kubernetes-native workflow engine"
    gethomepage.dev/group: "Dev"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons@main/svg/argo-cd.svg"
    gethomepage.dev/weight: "100"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance = argo-workflows"
spec:
  hostnames:
    - argo.${SECRET_INTERNAL_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: networking
  rules:
    - backendRefs:
        - name: argo-workflows-server
          port: 2746
